kubernetes/infrastructure/monitoring/grafana/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-envoy
  namespace: grafana
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: https
    - name: envoy-gateway
      namespace: gateway
      sectionName: http
  hostnames:
    - grafana.timourhomelab.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana-service
          port: 3000
